Fix for working with Spoon without a GUI